--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "mongodb": "^4.6.0",
     "node": "^17.7.2",
@@ -11,6 +12,5 @@
   },
   "scripts": {
     "start": "nodemon index.js"
-
   }
 }
