--- a/client/package.json
+++ b/client/package.json
@@ -1,7 +1,7 @@
 {
   "name": "client",
   "version": "0.1.0",
-  "proxy": "http://localhost:8000",
+  "homepage": "https://mnicol1.github.io/final-project/",
   "private": true,
   "dependencies": {
     "@auth0/auth0-react": "^1.10.1",
@@ -9,6 +9,7 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "components": "^0.1.0",
+    "gh-pages": "^4.0.0",
     "radio-browser-api": "^6.0.1",
     "react": "^18.1.0",
     "react-audio-player": "^0.17.0",
@@ -22,6 +23,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build", 
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
