--- a/client/package.json
+++ b/client/package.json
@@ -1,7 +1,7 @@
 {
   "name": "client",
   "version": "0.1.0",
-  "homepage": "https://mnicol1.github.io/final-project/",
+  "homepage": "http://worldwaveradio.ca/",
   "private": true,
   "dependencies": {
     "@auth0/auth0-react": "^1.10.1",
