--- a/client/package.json
+++ b/client/package.json
@@ -18,12 +18,14 @@
     "components": "^0.1.0",
     "file-loader": "^6.2.0",
     "gh-pages": "^4.0.0",
+    "leaflet": "^1.9.4",
     "radio-browser-api": "^6.0.1",
     "react": "^18.1.0",
     "react-audio-player": "^0.17.0",
     "react-dev-utils": "^12.0.1",
     "react-dom": "^18.1.0",
     "react-icons": "4.4.0",
+    "react-leaflet": "^4.2.1",
     "react-paginate": "^8.1.3",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
